# C-Unix

./: .gitignore  CMakeLists.txt  README.md  names.txt
header/: Parser.h  andToken.h  base.h  executable.h  executeToken.h  inputToken.hpp  nextToken.h  orToken.h  outputToken.hpp  parser.h  pipeToken.hpp  quitToken.h  testToken.h  testingToken.h
integration_tests/: commented_command_test  commented_command_tests.sh  exit_command_test  exit_command_tests.sh  integration_tokens_test.cpp  multiple_commands_test  multiple_commands_tests.sh  precedence_test  precedence_tests.sh  quotation_command_test  quotation_command_tests.sh  single_command_test  single_command_tests.sh  single_commands_tests.sh  test_literal_test  test_literal_tests.sh  test_symbolic_test  test_symbolic_test.txt  test_symbolic_tests  test_symbolic_tests.sh
prototype/: execvp_prototype.cpp  fork_prototype.cpp  function_prototype.cpp  guidline.txt  main_prototype.cpp  parser.cpp  parser.h  parser_prototype.cpp  parser_prototype.h  waitpid_prototype.cpp
src/: Parser.cpp  andToken.cpp  executable.cpp  executeToken.cpp  inputToken.cpp  main.cpp  nextToken.cpp  orToken.cpp  outputToken.cpp  parser.cpp  pipeToken.cpp  quitToken.cpp  testToken.cpp
unit_tests/: parser_test.cpp  parser_test.hpp  unit_tests.cpp  unit_tests.hpp
